Added hashrate and block candidate pages to Mining webpanel, with some changes to block packages to expose more info.
